--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header class="head">
-        <img src="./assets/images/logoHalf2.png" alt="header" class="logo">
+        <img src="./assets/images/logoHalf2.webp" alt="header" class="logo">
     </header>
 
     <div class="container">
-        <img src="./assets/images/pinata1.png" alt="pinata" class="pinata">
+        <img src="./assets/images/pinata1.webp" alt="pinata" class="pinata">
         <div class="target"></div>
         <input class="input" type="text" maxlength="1">
         <div class="errorList"></div>
