responsive design test

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <footer>
-        by <a href="https://github.com/Dan-DH?">Daniel Diaz</a>
+        by <a href="https://github.com/Dan-DH?" target="_blank" rel="noopener">Daniel Diaz</a>
     </footer>
 
     <script src="./script.js"></script>
