responsive design test

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <img src="./assets/images/pinata1.webp" alt="pinata" class="pinata">
         <div class="target"></div>
-        <input class="input" type="text" maxlength="1">
+        <input class="input" type="text">
         <div class="errorList"></div>
         <i class="fas fa-redo reload"></i>
     </div>
