responsive design test

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header class="head">
-        <img src="./assets/images/logoHalf2.webp" alt="header" class="logo">4
+        <img src="./assets/images/logoHalf2.webp" alt="header" class="logo">5
     </header>
 
     <div class="container">
         <img src="./assets/images/pinata1.webp" alt="pinata" class="pinata">
         <div class="target"></div>
-        <input class="input" type="text">
+        <input class="input" type="text" maxlength="1">
         <div class="errorList"></div>
         <i class="fas fa-redo reload"></i>
     </div>
