--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="head">
-        <img src="./assets/images/logoHalf2.webp" alt="header" class="logo">4
+        <img src="./assets/images/logoHalf2.webp" alt="header" class="logo">
     </header>
 
     <div class="container">
