--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/89bc576fb3.js" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
     <title>¡Piñata!</title>
 </head>
 <body>
     <header class="head">
-        <img src="./assets/images/logoHalf2.webp" alt="header" class="logo">
+        <img src="./assets/images/logo.webp" alt="header" class="logo">
     </header>
 
     <div class="container">
