responsive design test

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="target"></div>
         <input class="input" type="text" maxlength="1">
         <div class="errorList"></div>
-        <i class="fas fa-redo reload"></i>
+        <!-- <i class="fas fa-redo reload"></i>  -->
     </div>
 
     <footer>
